--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,2 @@
 clog
-*spec~
-/igbinary-1.1.1.tgz
-/igbinary-tests.tgz
-/igbinary-igbinary-1.1.1-15-g3b8ab7e.tar.gz
-/igbinary-1.1.2-c35d48f.tar.gz
-/igbinary-1.2.0.tgz
-/igbinary-1.2.1.tgz
-/igbinary-1.2.2-2b7c703.tar.gz
-/igbinary-1.2.2-6a2d5b7.tar.gz
-/igbinary-2.0.0.tgz
-/igbinary-2.0.1.tgz
-/igbinary-2.0.3.tgz
-/igbinary-2.0.4.tgz
-/igbinary-2.0.5RC1.tgz
-/igbinary-2.0.5.tgz
-/igbinary-2.0.6.tgz
-/igbinary-2.0.7.tgz
+/igbinary-2.*.tgz
